--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "classnames": "^2.5.1",
     "framer-motion": "^11.1.9",
-    "next": "14.2.2",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.76.0"
